@@ -19,7 +19,7 @@ BINDIR?=$(PREFIX)/bin
 
 DEBUG?=disable
 
-CLASSPATH=/usr/share/java/csv.jar:/usr/share/java/debug-$(DEBUG).jar:/usr/share/java/itext.jar
+CLASSPATH=/usr/share/java/csv.jar:/usr/share/java/debug-$(DEBUG).jar:/usr/share/java/itext.jar:/usr/share/java/commons-net.jar
 
 VERSION=$(shell sed -n '1s/Version \(.*\):/\1/p' changelog)
 
@@ -59,13 +59,15 @@ csv.jar:
 	ln -sf /usr/share/java/csv.jar .
 itext.jar: 
 	ln -sf /usr/share/java/itext.jar .
+commons-net.jar: 
+	ln -sf /usr/share/java/commons-net.jar .
 debug-$(DEBUG).jar: 
 	ln -sf /usr/share/java/debug-$(DEBUG).jar .
 
 bin/%: %.sh .bin
 	sed 's,\%JARINSTPATH\%,$(JARINSTALLDIR),;s,\%JARLIBPATH\%,$(JARLIBDIR),;s,\%VERSION\%,$(VERSION),;s,\%DEBUG\%,$(DEBUG),;s,\%JAVA\%,$(JAVA),' < $< > $@
 
-testbin/%: %.sh .testbin salliere-$(VERSION).jar csv.jar debug-$(DEBUG).jar itext.jar gsalliere-$(VERSION).jar
+testbin/%: %.sh .testbin salliere-$(VERSION).jar csv.jar debug-$(DEBUG).jar itext.jar gsalliere-$(VERSION).jar commons-net.jar
 	sed 's,\%JARPATH\%,.,;s,\%VERSION\%,$(VERSION),;s,\%DEBUG\%,$(DEBUG),;s,\%JAVA\%,$(JAVA),' < $< > $@
 	chmod 755 $@
 
@@ -75,9 +77,9 @@ testbin/%: %.sh .testbin salliere-$(VERSION).jar csv.jar debug-$(DEBUG).jar itex
 SalliereManifest.txt: Manifest.txt.in
 	echo Main-Class: cx.ath.matthew.salliere.Salliere > $@
 ifeq ($(DEBUG),enable)
-	echo Class-Path: $(JARLIBDIR)/csv.jar $(JARLIBDIR)/debug-$(DEBUG).jar $(JARLIBDIR)/itext.jar >> $@
+	echo Class-Path: $(JARLIBDIR)/csv.jar $(JARLIBDIR)/debug-$(DEBUG).jar $(JARLIBDIR)/itext.jar $(JARLIBDIR)/commons-net.jar >> $@
 else
-	echo Class-Path: $(JARLIBDIR)/csv.jar $(JARLIBDIR)/itext.jar >> $@
+	echo Class-Path: $(JARLIBDIR)/csv.jar $(JARLIBDIR)/itext.jar $(JARLIBDIR)/commons-net.jar >> $@
 endif
 	cat $< >> $@
 	echo "Implementation-Version: $(VERSION)" >> $@
