@@ -1,6 +1,7 @@
 Version 0.6:
 
 	* Add handicap support
+	* Add ECATS upload support
 
 Version 0.5.2:
 
